# ML-Regression

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Muhammad_Moiz_Homework_2.ipynb  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/: basic_linear_regression.py  regularized_regression.py  robust_regression.py
scripts/: demonstrate_package.py  generate_readme_images.py
src/ml_regression/: __init__.py  metrics.py  models.py  optimizers.py  utils.py
tests/: test_ml_regression.py
